# collaborative-robotics-2026

./: CLAUDE.md  README.md  our_hand_tracking.py
Docker/: Dockerfile
Lidar-Models/: 2020_Aluminum_Extrusion _400mm.stl
docs/: remote_setup.md
ros2_ws/: setup_env.bash
ros2_ws/src/delete_later/: astar_navigator.py
ros2_ws/src/tidybot_bringup/: CMakeLists.txt
ros2_ws/src/tidybot_bringup/launch/: nav_exploration.launch.py  real.launch.py  sim.launch.py
ros2_ws/src/tidybot_bringup/rviz/: tidybot.rviz
ros2_ws/src/tidybot_bringup/scripts/: audio_processing_node.py  fruit_detection.py  image_node.py  our_astar_navigator.py  our_base_state_estimator.py  our_depth_estimator.py  our_frontier_exploration.py  our_hand_tracking.py  our_heading_controller.py  our_state_machine.py  our_trajectory_tracking.py  state_machine_node.py  test_arms.py  test_arms_sim.py  test_astar.py  test_frontier_exploration.py  test_grippers_real.py  test_navigation_stack.py  test_occupancy_grid.py
ros2_ws/src/tidybot_bringup/scripts/asl_tb3_lib/: __init__.py  _init_.py  girds.py  grids.py  math_utils.py  navigation.py  tf_utils.py
ros2_ws/src/tidybot_control/: setup.py
ros2_ws/src/tidybot_control/tidybot_control/: gripper_wrapper_node.py
ros2_ws/src/tidybot_description/urdf/: tidybot_wx250s.urdf.xacro
ros2_ws/src/tidybot_ik/: package.xml  setup.py
ros2_ws/src/tidybot_ik/tidybot_ik/: grasp_generation_node.py  grasp_node.py  motion_planner_node.py  motion_planner_real_node.py
ros2_ws/src/tidybot_mujoco_bridge/: setup.py
ros2_ws/src/tidybot_mujoco_bridge/tidybot_mujoco_bridge/: mujoco_bridge_node.py
ros2_ws/src/tidybot_navigation/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/tidybot_navigation/behavior_trees/: navigate_to_pose.xml
ros2_ws/src/tidybot_navigation/config/: ekf_localization.yaml  nav2_params.yaml  nav2_params_sim.yaml  slam_toolbox_params.yaml  tag_location.yaml
ros2_ws/src/tidybot_navigation/launch/: navigation.launch.py
ros2_ws/src/tidybot_navigation/rviz/: navigation.rviz
ros2_ws/src/tidybot_navigation/scripts/: init_forward.py  initial_pose_publisher.py  startup_clear_scan.py
ros2_ws/src/tidybot_navigation/tidybot_navigation/: tag_global_pose_node.py
simulation/assets/meshes/base/: LIDAR.stl  Lidar_Mount.stl
simulation/assets/mujoco/: our_scene_frontier_explore.xml  scene_wx250s_bimanual_nav.xml  tidybot_wx250s_bimanual.xml
simulation/scripts/: pick_up_block_sim.py
